--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="pj8-tA-SkB" id="lOg-j1-57Y"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="tbx-wH-YBz"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="tbx-wH-YBz">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="4kn-XA-lCm">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="pj8-tA-SkB" id="sO7-9U-QL9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gvP-rx-XMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
